--- a/css/slicknav.css
+++ b/css/slicknav.css
@@ -3,6 +3,7 @@
  * (c) 2016 Josh Cope
  * licensed under MIT
  */
+
 .slicknav_btn {
   position: relative;
   display: block;
@@ -10,23 +11,23 @@
   float: right;
   padding: 0.438em 0.625em 0.438em 0.625em;
   line-height: 1.125em;
-  cursor: pointer; 
+  cursor: pointer;
 }
-.slicknav_btn .slicknav_icon-bar + .slicknav_icon-bar {
-  margin-top: 3px;
+.slicknav_btn .slicknav_icon-bar+.slicknav_icon-bar {
+  margin-top: 5px;
 }
 .slicknav_menu {
   *zoom: 1;
 }
 .slicknav_menu .slicknav_menutxt {
   display: block;
-  line-height: 1.188em;
-  float: left; 
+  line-height: 1.2em;
+  float: left;
 }
 .slicknav_menu .slicknav_icon {
   float: left;
   width: 30px;
-  margin: 0.188em 0 0 0.438em; 
+  margin: 0.188em 0 0 0.438em;
 }
 .slicknav_menu .slicknav_icon:before {
   background: transparent;
@@ -34,7 +35,7 @@
   height: 0.875em;
   display: block;
   content: "";
-  position: absolute; 
+  position: absolute;
 }
 .slicknav_menu .slicknav_no-text {
   margin: 0;
@@ -42,39 +43,39 @@
 .slicknav_menu .slicknav_icon-bar {
   display: block;
   width: 100%;
-  height: 2px;
-  margin-left: auto;
+  height:2px; 
+  margin-left: auto; 
   margin-right: auto;
-  transform: all .2s ease;
+  transition: all .2s ease;
 }
-.slicknav_btn:slicknav_open .slicknav_icon-bar:nth-child(2) {
+.slicknav_open .slicknav_icon{
+  width: 20px;
+}
+.slicknav_btn.slicknav_open .slicknav_icon-bar:nth-child(2) {
   width: 0%;
 }
-.slicknav_btn:slicknav_open .slicknav_icon-bar:first-child {
+.slicknav_btn.slicknav_open .slicknav_icon-bar:first-child {
   transform: rotate(45deg);
   transform-origin: left;
 }
-.slicknav_btn:slicknav_open .slicknav_icon-bar:last-child {
+.slicknav_btn.slicknav_open .slicknav_icon-bar:last-child {
   transform: rotate(-45deg);
   transform-origin: left;
-}
-.slicknav_open .slicknav_icon {
-  width: 20px;
 }
 .slicknav_menu:before {
   content: " ";
   display: table;
- }
+}
 .slicknav_menu:after {
   content: " ";
   display: table;
-  clear: both; 
+  clear: both;
 }
 .slicknav_nav {
   clear: both;
 }
 .slicknav_nav ul {
-  display: block; 
+  display: block;
 }
 .slicknav_nav li {
   display: block;
@@ -85,7 +86,7 @@
 }
 .slicknav_nav .slicknav_item {
   cursor: pointer;
- }
+}
 .slicknav_nav .slicknav_item a {
   display: inline;
 }
@@ -93,14 +94,14 @@
   display: block;
 }
 .slicknav_nav a {
-  display: block; 
+  display: block;
 }
 .slicknav_nav .slicknav_parent-link a {
   display: inline;
- }
+}
 .slicknav_brand {
   float: left;
- }
+}
 .slicknav_menu {
   font-size: 16px;
   box-sizing: border-box;
@@ -112,10 +113,10 @@
 .slicknav_menu .slicknav_menutxt {
   color: #fff;
   font-weight: bold;
-  text-shadow: 0 1px 3px #000; 
+  text-shadow: 0 1px 3px #000;
 }
 .slicknav_menu .slicknav_icon-bar {
-  background-color: #fff; 
+  background-color: #fff;
 }
 .slicknav_btn {
   margin: 5px 5px 6px;
@@ -129,12 +130,11 @@
   color: #fff;
   margin: 0;
   padding: 0;
-  list-style: none;
   overflow: hidden;
-  position: absolute;
+  position: absolute;  
   top: 100%;
-  left: 0;
   right: 0;
+  left: 0;
   background: #000;
   text-align: center;
   padding: 10px 0;
@@ -143,7 +143,7 @@
   list-style: none;
   overflow: hidden;
   padding: 0;
-  margin: 0 0 0 20px; 
+  margin: 0 0 0 20px;
 }
 .slicknav_nav .slicknav_row {
   padding: 5px 10px;
@@ -160,18 +160,18 @@
   padding: 10px 15px;
   text-decoration: none;
   color: #fff;
-  font-size: 16px;
+  font-size: 14px;
   text-transform: uppercase;
- }
+}
 .slicknav_nav a:hover {
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   border-radius: 6px;
   background: #ccc;
   color: #222;
- }
+}
 .slicknav_nav .slicknav_txtnode {
-  margin-left: 15px; 
+  margin-left: 15px;
 }
 .slicknav_nav .slicknav_item a {
   padding: 0;
